--- a/index.html
+++ b/index.html
@@ -162,10 +162,7 @@ window.onload = function() {
 <div>Speaking of projections...</div>
 <div>OMG there are so many!</div>
 <div><a href="http://www.jasondavies.com/maps/transition/"><img src="images/vandergrinten-iv.png"></a></div>
-<div>Anyway, so all other slippy maps and slippy map software followed Google's lead.</div>
-<div>Zoom 0 is the whole world in one tile!</div>
-<div>Zoom 1, etc </div>
-<div><img src="images/tiles/zoom-13-tiles.png">zoom 13</div>
+<div>Anyway, so all other slippy maps and slippy map software followed Google's lead, with tiles at the base.</div>
 <div>Not surprisingly, a collection of tiles makes up what we call the map's <em>base layer.</em></div>
 <div>When we layer things like markers on top of them, we call those <em>data layers</em> or <em>content layers</em>.
 <div>Here's the breakdown:</em>.
