--- a/index.html
+++ b/index.html
@@ -165,10 +165,17 @@ window.onload = function() {
 <div><a href="http://www.jasondavies.com/maps/transition/"><img src="images/vandergrinten-iv.png"></a></div>
 <div>Anyway, so all other slippy maps and slippy map software followed Google's lead, with tiles at the base.</div>
 <div>Not surprisingly, a collection of tiles makes up what we call the map's <em>base layer.</em></div>
-<div>When we layer things like markers on top of them, we call those <em>data layers</em> or <em>content layers</em>.
-<div>Here's the breakdown:</em>.
-<div><img src=""></div>
-<div>Now we're ready to show you the whole <em>web map anatomy!</em></div>
+<div>When we layer things like markers on top of them, we call those <em>data layers</em> or <em>content layers</em>.</div>
+<div>Here's the breakdown of how these pieces fit together:</div>
+<div><img src="images/basemap-datalayers-01.png"></div>
+<div><img src="images/basemap-datalayers-02.png"></div>
+<div><img src="images/basemap-datalayers-03.png"></div>
+<div><img src="images/basemap-datalayers-04.png"></div>
+<div><img src="images/basemap-datalayers-05.png"></div>
+<div><img src="images/basemap-datalayers-06.png"></div>
+<div>Make sense?</div>
+<div>Great!</div>
+<div>Now we're ready to dive a little deeper into the whole <em>web map anatomy!</em></div>
 <div>[code: show the simplest possible leaflet map]</div>
 <div><img src="images/leaflet-toner-snapshot-giant.png"><a href="http://sta.mn/v5h">sta.mn/v5h</a></div>
 <div><img src="images/leaflet_code.png"></div>
