--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@ window.onload = function() {
 <div>With each additional zoom level, the number of tiles increases exponentially.</div>
 <div><img src="images/tiles/zoom1.png"><em>Zoom level 1: 4 tiles for the world.</em></div>
 <div><img src="images/tiles/zoom2-3-4-5.png"><em>Zoom level 2, 3, 4, 5</em></div>
+<div><img src="images/tiles/zoom13.png"><em>Zoom level 13</em></div>
 <div>Tiles are <em>rendered</em> in advance (usually) then stored in a cache</div>
 <div>Map tiles are just images on the web, so you can link to them individually.</div>
 <div>For example: <a href="http://tile.openstreetmap.org/4/2/3.png">http://tile.openstreetmap.org/4/2/3.png</a></div>
