--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@ window.onload = function() {
 <div>Now let's get started :)</div>
 <div>Today we will be talking about the simplest, most generic web map. But we will note exceptions.</div>
 <div>(There are always exceptions!)</div>
-<div>This will be a complete <em>open source</em> stack.</div>
-<div>We'll talk a lot about <em>Google</em>, but we're going to show you a <em>100% Google-free stack</em></div>
+<div>We'll talk a lot about <em>Google</em>, but we're going to show you a <em>100% open source</em> Google-free stack</div>
 <div>But first, what does <em>anatomy</em> have to do with a web map?</div>
 <div>Well,</div>
 <div>Both bodies and web maps have components and systems that <em>interact and intertwine.</em></div>
@@ -111,14 +110,11 @@ window.onload = function() {
 <div><img src="images/osm.png"><a href="http://www.openstreetmap.org/">OpenStreetMap.org</a></div>
 <div><img src="images/google-map.png"><a href="https://www.google.com/maps/preview">maps.google.com</a></div>
 <div><img src="images/mapsdotstamen.png"><a href="http://maps.stamen.com">maps.stamen.com</a></div>
-<div>Making maps for mobile devices can be similar, but we're not talking about that today.</div> 
-<div>We're also not talking about <em>digital globes</em> like <em>Google Earth.</em></div>
-<div><img src="images/google-earth.png"> <a href="http://www.google.com/earth/">google.com/earth/</a></div>
+<div><img src="images/iphone_maps.jpg">Making maps for <em>mobile devices</em> can be similar, but we're not talking about that today.</div> 
+<div><img src="images/google-earth.png">We're also not talking about <em>digital globes</em> like <a href="http://www.google.com/earth/">Google Earth</a></div>
 <div><em>ok ok</em></div>
 <div>but how about a little history:<br><em>How did web maps come to be?</em></div>
-<div>First, there were digital maps like <a href="http://www.esri.com/software/arcgis">ArcGIS</a>.</div>
-<div><img src="images/3-map-history/1-arcGIS.jpg"></div>
-<div><img src="images/3-map-history/1-arcGIS.jpg"><a href="esri.com/software/arcgis">esri.com/software/arcgis</a></div>
+<div style="color: black"><img src="images/3-map-history/1-arcGIS.jpg">First, there were digital maps like <a href="http://www.esri.com/software/arcgis">ArcGIS</a>.</div>
 <div>Although useful, ArcGIS for the Web is not user friendly :( </div>
 <div><em>Also usually ugly</em><br>(though the one we just showed was not too bad)</div>
 <div>In 1996, Mapquest launched its web service.</div>
@@ -168,8 +164,7 @@ window.onload = function() {
 <div>Make sense?</div>
 <div>Great!</div>
 <div>Now we're ready to dive a little deeper into the whole <em>web map anatomy!</em></div>
-<div>[code: show the simplest possible leaflet map]</div>
-<div><img src="images/leaflet-toner-snapshot-giant.png"><a href="http://sta.mn/v5h">sta.mn/v5h</a></div>
+<div><img src="images/leaflet-toner-snapshot-giant.png">The simplest possible web map: <a href="http://sta.mn/v5h">sta.mn/v5h</a></div>
 <div><img src="images/leaflet_code.png"></div>
 <div><img src="images/anatomy-of-a-web-map.png"></div>
 <div>The javascript: we recommend <a href="http://leafletjs.com">Leaflet</a>, although there are others: <a href="http://openlayers.org">OpenLayers</a> / <a href="http://modestmaps.com">Modest Maps</a> / <a href="http://polymaps.org">Polymaps</a></div>
