--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@ window.onload = function() {
 <div>By <a href="http://stamen.com/studio/alan">Alan McConchie</a> :) and <a href="http://stamen.com/studio/beth">Beth Schechter</a> :D</div>
 <div>Housekeeping!<br>You can follow along here: <a href="http://sta.mn/qhg">sta.mn/qhg</a>. Links are in blue boxes, <em>green</em> is just emphasis. You can comment and edit on <a href="https://github.com/maptime/anatomy-of-a-web-map/">github!</a></div>
 <div>Now let's get started :)</div>
-<div>Today we will be talking about the simplest, most generic web map. But we will note exceptions.</div>
+<div>Today we will be talking about the <em>very most basic principles</em> of web mapping.</div>
+<div>We're including a little history, so you can get </div>
 <div>(There are always exceptions!)</div>
+<div>To get there, </div>
 <div>This will be a complete <em>open source</em> stack.</div>
 <div>We'll talk a lot about <em>Google</em>, but we're going to show you a <em>100% Google-free stack</em></div>
 <div>But first, what does <em>anatomy</em> have to do with a web map?</div>
