vector tiles image

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ window.onload = function() {
 <div>And don't forget: <a href="https://developers.google.com/maps/documentation/javascript/">Google Maps API</a> / <a href="http://www.microsoft.com/maps/choose-your-bing-maps-API.aspx">Bing Maps API</a> / <a href="http://developer.here.com/web/guest/javascript-apis">Nokia HERE Maps API</a> / <a href="https://developers.arcgis.com/en/javascript/">ESRI ArcGIS API</a></div>
 <div>3 exceptions to the simplified story!</div>
 <div>Exception #1: Tiles are always rasters <em>EXCEPT</em> when they're not!</div>
-<div><em>vector tiles!</em> What are they?</div>
+<div><img src="images/vector_tiles.png"><em>vector tiles!</em> What are they? <a href="http://bl.ocks.org/wboykinm/7393674">(unrelated demo)</a></div>
 <div>vector tiles: they are an alternative to a database that makes raster tiles. They still render to rasters for display</div>
 <div>Raster: ask for data to fit into tile</div>
 <div>Vector: already have vector data sliced up in the way that I will make raster tiles</div>
@@ -205,8 +205,8 @@ window.onload = function() {
 <div>Do I need a content layer?</div>
 <div>No? Put all your data into the tiles, possibly using UTFGrid for interactivity</div>
 <div>Yes? Convert a Shapefile to GeoJSON with <a href="http://ogre.adc4gis.com/">OGRE</a> or write your own GeoJSON with <a href="http://geojson.io">geojson.io</a></div>
-<div>Finally, <a href="http://cartodb.com">CartoDB</a>takes care of almost all of this for you!</div>
-<div><img src="images/random/soon.jpg">More: <a href="http://maptime.github.io/geolearning.html">maptime.github.io/geolearning.html</a> <p>Soon: <a href="http://omgitsmaptime.com">omgitsmaptime.com</a></div>
+<div>Finally, <a href="http://cartodb.com">CartoDB</a> takes care of almost all of this for you!</div>
+<div><img src="images/random/soon.jpg">More:<br><a href="http://maptime.github.io/geolearning.html">maptime.github.io/geolearning.html</a> <p>Soon:<br><a href="http://omgitsmaptime.com">omgitsmaptime.com</a></div>
 
 <div>Thanks to:</div>
 <div><a href="https://github.com/lyzidiamond">Lyzi Diamond</a></div>
