--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ window.onload = function() {
 <div>Do I need my own tiles?</div>
 <div>No? Use these! [list of examples, OSM styles, CloudMade, Stamen, MapBox, MapQuest]</div>
 <div>Yes? Use <a href="https://www.mapbox.com/tilemill/">TileMill</a> to design your own tiles.</div>
-<div><img src="images/worldwide-wood.png"> Pretty!</div>
+<div><img src="images/worldwide-wood.png"> <em>Pretty!</em></div>
 <div><a href="https://www.mapbox.com/carto">CartoCSS</a> (or just carto)</div>
 <div>You can host these files on <a href="https://www.mapbox.com/plans/">MapBox</a>, or...</div>
 <div>Serve the tiles by running your own tile server. For example: <a href="https://github.com/klokantech/tileserver-php/">TileServer.php</a> / <a href="http://tilestache.org">TileStache</a> / <a href="http://tilecache.org">TileCache</a> / <a href="https://github.com/mapbox/tilestream">TileStream</a> / <a href="https://github.com/chelm/mbtiles-server">mbtiles-server</a> / <a href=http://wiki.openstreetmap.org/wiki/Mod_tile">mod_tile</a></div>
