Style mapquest page

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ window.onload = function() {
 <div>but how about a little history:<br><em>How did web maps come to be?</em></div>
 <div style="color: black"><img src="images/3-map-history/1-arcGIS.jpg">First, there were digital maps like <a href="http://www.esri.com/software/arcgis">ArcGIS</a>.</div>
 <div>Although useful, GIS for the Web is not user friendly :( </div>
-<div><img src="images/3-map-history/2-Ridgefield-CT-Mapquest-out.jpg">In 1996, Mapquest launched its web service.</div>
+<div style="color: black"><img src="images/3-map-history/2-Ridgefield-CT-Mapquest-out.jpg">In 1996, Mapquest launched its web service.</div>
 <div><img src="images/3-map-history/2-Ridgefield-CT-Mapquest-out.jpg"> <em>ta da!</em></div>
 <div>Directions! Online! Revolutionary!</div>
 <div>The problem: it was slow to load :(</div>
