--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ window.onload = function() {
 <div>Make sense?</div>
 <div>Great!</div>
 <div>Now we're ready to dive a little deeper into the whole <em>web map anatomy!</em></div>
-<div><img src="images/leaflet-toner-snapshot-giant.png">The simplest possible web map: <a href="http://sta.mn/v5h">sta.mn/v5h</a></div>
+<div><img src="images/leaflet-toner-snapshot-giant.png"><em>The simplest possible web map:</em> <a href="http://sta.mn/v5h">sta.mn/v5h</a></div>
 <div><img src="images/leaflet_code.png"></div>
 <div><img src="images/anatomy-of-a-web-map.png"></div>
 <div>What does the javascript library do? Grabs the tiles, adds content layer, handles interaction.</div>
